周期登録、ソート機能追加
