# api/@types/index.ts
@@ -4,8 +4,9 @@ export type MoneyDiaryGetResponse = {
   memo: string;
   withdrawal: number;
   payment: number;
+  incomeAndExpenditure: number;
   date: Date;
-  period: number;
+  automaticRegistration: boolean;
   expenseItemName: string;
   categories: { id: number; name: string }[];
   createdAt: string;
@@ -17,7 +18,16 @@ export type MoneyDiaryDto = {
   withdrawal: number;
   payment: number;
   date: Date;
-  period: number;
+  automaticRegistration: boolean;
   expenseItemName: string;
   categories: (string | number)[];
 };
+
+export type CreateCategoryDto = {};
+
+export type Category = {
+  id: number;
+  name: string;
+};
+
+export type UpdateCategoryDto = {};
