# api/api/v1/category/index.ts
@@ -1,0 +1,14 @@
+/* eslint-disable */
+import type * as Types from '../../../@types'
+
+export type Methods = {
+  post: {
+    status: 201
+    reqBody: Types.CreateCategoryDto
+  }
+
+  get: {
+    status: 200
+    resBody: Types.Category[]
+  }
+}
